--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 EnhanceWrapper.xcodeproj/project.xcworkspace/xcuserdata/kostya.xcuserdatad/UserInterfaceState.xcuserstate
 EnhanceWrapper.xcodeproj/xcuserdata/kostya.xcuserdatad/xcschemes/xcschememanagement.plist
+EnhanceWrapper.xcodeproj/xcuserdata/kostya.xcuserdatad/xcdebugger
